add validation to index video
